<resources>
    <string name="app_name">ArvindParty</string>
    <string name="xpopup_cancel">Cancel</string>
    <string name="xpopup_ok">OK</string>
    <string name="xpopup_save">Save</string>
    <string name="Cancel_management">Cancel_management</string>
    <string name="Checkbox">Checkbox</string>
    <string name="I_joined">I_joined</string>
    <string name="System_notifications">System_notifications</string>
    <string name="Verified">Verified</string>
    <string name="accept">accept</string>
    <string name="accept_pk">accept_pk</string>
    <string name="accepted">accepted</string>
    <string name="account_balance">account_balance</string>
    <string name="account_holder_name">account_holder_name</string>
    <string name="account_number">account_number</string>
    <string name="account_pwd">account_pwd</string>
    <string name="accumulated_gifts">accumulated_gifts</string>
    <string name="acknowledge_that">acknowledge_that</string>
    <string name="activity_center">activity_center</string>
    <string name="actual_pay">actual_pay</string>
    <string name="actual_payment">actual_payment</string>
    <string name="add_friend">add_friend</string>
    <string name="add_friends">add_friends</string>
    <string name="add_host">add_host</string>
    <string name="add_level">add_level</string>
    <string name="add_new_address">add_new_address</string>
    <string name="add_text">add_text</string>
    <string name="add_to_cart">add_to_cart</string>
    <string name="add_video">add_video</string>
    <string name="admin_recharge_record">admin_recharge_record</string>
    <string name="affiliated_guild">affiliated_guild</string>
    <string name="again_password">again_password</string>
    <string name="agency_assistant">agency_assistant</string>
    <string name="agency_id">agency_id</string>
    <string name="agency_information">agency_information</string>
    <string name="agent">agent</string>
    <string name="agent_recharge_record">agent_recharge_record</string>
    <string name="agree_with">agree_with</string>
    <string name="ahchor_up_task">ahchor_up_task</string>
    <string name="all_comments">all_comments</string>
    <string name="all_mics">all_mics</string>
    <string name="all_servers">all_servers</string>
    <string name="amount_expected">amount_expected</string>
    <string name="anchor_center">anchor_center</string>
    <string name="anchor_level">anchor_level</string>
    <string name="anchor_level_ino">anchor_level_ino</string>
    <string name="anchor_ranking">anchor_ranking</string>
    <string name="and">and</string>
    <string name="announcement">announcement</string>
    <string name="app_customer">app_customer</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
    <string name="application_information">application_information</string>
    <string name="application_time">application_time</string>
    <string name="area">area</string>
    <string name="attachment">attachment</string>
    <string name="attachment2">attachment2</string>
    <string name="audio_video_settings">audio_video_settings</string>
    <string name="auto_pk">auto_pk</string>
    <string name="average">average</string>
    <string name="awaiting_payment">awaiting_payment</string>
    <string name="ayp_custom_action_left">ayp_custom_action_left</string>
    <string name="ayp_custom_action_right">ayp_custom_action_right</string>
    <string name="ayp_full_screen_button">ayp_full_screen_button</string>
    <string name="ayp_live">ayp_live</string>
    <string name="ayp_open_video_in_youtube">ayp_open_video_in_youtube</string>
    <string name="ayp_play_button">ayp_play_button</string>
    <string name="ban_room">ban_room</string>
    <string name="bank_names">bank_names</string>
    <string name="baomai">baomai</string>
    <string name="bd_income_last_month">bd_income_last_month</string>
    <string name="bd_income_this_month">bd_income_this_month</string>
    <string name="beauty_radio_face_shape">beauty_radio_face_shape</string>
    <string name="beauty_radio_filter">beauty_radio_filter</string>
    <string name="beauty_radio_skin_beauty">beauty_radio_skin_beauty</string>
    <string name="better">better</string>
    <string name="birthday">birthday</string>
    <string name="blocked_list">blocked_list</string>
    <string name="blue_team">blue_team</string>
    <string name="branch_names">branch_names</string>
    <string name="brvah_load_complete">brvah_load_complete</string>
    <string name="brvah_load_end">brvah_load_end</string>
    <string name="brvah_load_failed">brvah_load_failed</string>
    <string name="brvah_loading">brvah_loading</string>
    <string name="btn_save">btn_save</string>
    <string name="buy_now">buy_now</string>
    <string name="cancel">cancel</string>
    <string name="cart">cart</string>
    <string name="casual_games">casual_games</string>
    <string name="chat">chat</string>
    <string name="chat_delete">chat_delete</string>
    <string name="chat_header_not_desc">chat_header_not_desc</string>
    <string name="chat_input_edit_hint_text">chat_input_edit_hint_text</string>
    <string name="chat_message_detail">chat_message_detail</string>
    <string name="chat_minimalist_pop_more">chat_minimalist_pop_more</string>
    <string name="chat_not_read">chat_not_read</string>
    <string name="chat_room">chat_room</string>
    <string name="chat_to_top">chat_to_top</string>
    <string name="chat_top">chat_top</string>
    <string name="chatroom_owner">chatroom_owner</string>
    <string name="checkout">checkout</string>
    <string name="chillox_id">chillox_id</string>
    <string name="chillox_live">chillox_live</string>
    <string name="chillox_live_agency_application_form">chillox_live_agency_application_form</string>
    <string name="chip_text">chip_text</string>
    <string name="circle_ta">circle_ta</string>
    <string name="claim_reward">claim_reward</string>
    <string name="classic">classic</string>
    <string name="clear_message">clear_message</string>
    <string name="close_live_ban_user">close_live_ban_user</string>
    <string name="coin_number">coin_number</string>
    <string name="coins">coins</string>
    <string name="coins_limit">coins_limit</string>
    <string name="confirm">confirm</string>
    <string name="confirm_the_transfer_amount">confirm_the_transfer_amount</string>
    <string name="consumption">consumption</string>
    <string name="consumption_text">consumption_text</string>
    <string name="consumption_up">consumption_up</string>
    <string name="contact_account_tag">contact_account_tag</string>
    <string name="contact_add">contact_add</string>
    <string name="contact_add_friend_remark">contact_add_friend_remark</string>
    <string name="contact_add_more_info">contact_add_more_info</string>
    <string name="contact_add_more_send_request_text">contact_add_more_send_request_text</string>
    <string name="contact_add_wording">contact_add_wording</string>
    <string name="contact_create">contact_create</string>
    <string name="contact_friend_group">contact_friend_group</string>
    <string name="contact_friend_remark">contact_friend_remark</string>
    <string name="contact_group_type_tag">contact_group_type_tag</string>
    <string name="contact_minimalist_contacts">contact_minimalist_contacts</string>
    <string name="contact_my_friend">contact_my_friend</string>
    <string name="contact_next_step">contact_next_step</string>
    <string name="contact_no_new_friend_application">contact_no_new_friend_application</string>
    <string name="contact_not_found_info">contact_not_found_info</string>
    <string name="contact_profile_message">contact_profile_message</string>
    <string name="contact_search">contact_search</string>
    <string name="contact_selected_group_member">contact_selected_group_member</string>
    <string name="contact_set_add_wording">contact_set_add_wording</string>
    <string name="contact_set_remark_and_group">contact_set_remark_and_group</string>
    <string name="contact_signature_tag">contact_signature_tag</string>
    <string name="contact_us">contact_us</string>
    <string name="contact_validation_message">contact_validation_message</string>
    <string name="contributor">contributor</string>
    <string name="conversation_forward">conversation_forward</string>
    <string name="conversation_minimalist_chat">conversation_minimalist_chat</string>
    <string name="conversation_minimalist_done">conversation_minimalist_done</string>
    <string name="conversation_title_edit">conversation_title_edit</string>
    <string name="convertible">convertible</string>
    <string name="copy">copy</string>
    <string name="core_next_step">core_next_step</string>
    <string name="core_permission_dialog_positive_setting_text">core_permission_dialog_positive_setting_text</string>
    <string name="core_permission_dialog_title">core_permission_dialog_title</string>
    <string name="corresponding_gear_coin">corresponding_gear_coin</string>
    <string name="country">country</string>
    <string name="country_agency">country_agency</string>
    <string name="country_region">country_region</string>
    <string name="cover_size">cover_size</string>
    <string name="cp_dress_up_switch">cp_dress_up_switch</string>
    <string name="cp_relationship">cp_relationship</string>
    <string name="create">create</string>
    <string name="create_group">create_group</string>
    <string name="create_group_chat">create_group_chat</string>
    <string name="creating_family">creating_family</string>
    <string name="current_amount">current_amount</string>
    <string name="current_max_conversion_quantity">current_max_conversion_quantity</string>
    <string name="custom_quantity">custom_quantity</string>
    <string name="custom_redemption_num">custom_redemption_num</string>
    <string name="customer_id">customer_id</string>
    <string name="daily_attendance">daily_attendance</string>
    <string name="daily_update_time">daily_update_time</string>
    <string name="date">date</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="dear_talant">dear_talant</string>
    <string name="default_address">default_address</string>
    <string name="default_text">default_text</string>
    <string name="define">define</string>
    <string name="host">host</string>
    <string name="input_room_name">input_room_name</string>
    <string name="input_room_notice">input_room_notice</string>
    <string name="input_room_password">input_room_password</string>
    <string name="input_welcome_message">input_welcome_message</string>
    <string name="level">level</string>
    <string name="master">master</string>
    <string name="minute">minute</string>
    <string name="minutes_limit">minutes_limit</string>
    <string name="not_display">not_display</string>
    <string name="people">people</string>
    <string name="people_limit">people_limit</string>
    <string name="ratio">ratio</string>
    <string name="red_envelope">red_envelope</string>
    <string name="red_envelope_rules">red_envelope_rules</string>
    <string name="red_envelope_sent">red_envelope_sent</string>
    <string name="room_bg">room_bg</string>
    <string name="room_hick">room_hick</string>
    <string name="room_label">room_label</string>
    <string name="room_label_hint">room_label_hint</string>
    <string name="room_manger_number">room_manger_number</string>
    <string name="room_name">room_name</string>
    <string name="room_notice">room_notice</string>
    <string name="room_password">room_password</string>
    <string name="send">send</string>
    <string name="send_red_envelope">send_red_envelope</string>
    <string name="target">target</string>
    <string name="union_chief_salary">union_chief_salary</string>
    <string name="welcome_message">welcome_message</string>
</resources>