<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_chat_new"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:orientation="horizontal"
        android:paddingLeft="30mm"
        android:paddingRight="30mm"
        android:paddingBottom="10mm"
        android:layout_width="match_parent"
        android:layout_height="92mm">
        <TextView
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_envelope"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/treasure_fh"
            android:layout_width="33mm"
            android:layout_height="33mm"
            android:src="@mipmap/live_return"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <TextView
        android:textSize="12sp"
        android:textColor="#ffffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28mm"
        android:text="@string/send_red_envelope"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90mm">
        <EditText
            android:textSize="14dp"
            android:textColor="#fff"
            android:textColorHint="#ff666666"
            android:id="@+id/ed_total"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/coins_limit"
            android:maxLength="5"
            android:layout_weight="1"
            android:inputType="number"
            android:paddingStart="28mm"
            android:paddingEnd="28mm"/>
        <TextView
            android:textSize="14dp"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins"
            android:drawableLeft="@mipmap/image_jb"
            android:drawablePadding="4mm"
            android:layout_marginEnd="28mm"/>
    </LinearLayout>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1mm"
        android:layout_marginStart="28mm"
        android:layout_marginEnd="28mm"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90mm">
        <EditText
            android:textSize="14dp"
            android:textColor="#fff"
            android:textColorHint="#ff666666"
            android:id="@+id/ed_quantity"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="10"
            android:hint="@string/people_limit"
            android:maxLength="3"
            android:layout_weight="1"
            android:inputType="number"
            android:paddingStart="28mm"
            android:paddingEnd="28mm"/>
        <TextView
            android:textSize="14dp"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:layout_marginEnd="28mm"/>
    </LinearLayout>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1mm"
        android:layout_marginStart="28mm"
        android:layout_marginEnd="28mm"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90mm">
        <EditText
            android:textSize="14dp"
            android:textColor="#fff"
            android:textColorHint="#ff666666"
            android:id="@+id/ed_period"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="2"
            android:hint="@string/minutes_limit"
            android:maxLength="1"
            android:layout_weight="1"
            android:inputType="number"
            android:paddingStart="28mm"
            android:paddingEnd="28mm"/>
        <TextView
            android:textSize="14dp"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:layout_marginEnd="28mm"/>
    </LinearLayout>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1mm"
        android:layout_marginStart="24mm"
        android:layout_marginEnd="24mm"/>
    <TextView
        android:textSize="12dp"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280mm"
        android:text="@string/red_envelope_rules"
        android:layout_marginStart="34mm"
        android:layout_marginEnd="34mm"/>
    <TextView
        android:textSize="12dp"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12mm"
        android:text="@string/red_envelope_sent"
        android:layout_marginStart="34mm"
        android:layout_marginEnd="34mm"/>
    <TextView
        android:textSize="12dp"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:id="@+id/tv_send"
        android:background="@drawable/bg_treasure_send"
        android:layout_width="match_parent"
        android:layout_height="96mm"
        android:layout_marginTop="28mm"
        android:layout_marginBottom="28mm"
        android:text="@string/send"
        android:layout_marginStart="56mm"
        android:layout_marginEnd="56mm"/>
</LinearLayout>
