<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/common_toolbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="16dp"
                android:textColor="#ff333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="40mm"
                android:text="@string/room_name"/>
            <EditText
                android:textSize="14dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/second_text_color"
                android:background="@drawable/bg_login_white_input_grey"
                android:layout_width="match_parent"
                android:layout_height="112mm"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="28mm"
                android:hint="@string/input_room_name"
                android:maxLength="20"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textAlignment="viewStart"
                android:layoutDirection="locale"
                android:paddingStart="32mm"
                android:layout_marginEnd="28mm"/>
            <TextView
                android:textSize="16dp"
                android:textColor="#ff333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="40mm"
                android:text="@string/room_notice"/>
            <EditText
                android:textSize="14dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/second_text_color"
                android:background="@drawable/bg_login_white_input_grey"
                android:layout_width="match_parent"
                android:layout_height="112mm"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="28mm"
                android:layout_marginRight="28mm"
                android:hint="@string/input_room_notice"
                android:maxLength="50"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textAlignment="viewStart"
                android:layoutDirection="locale"
                android:paddingStart="32mm"/>
            <TextView
                android:textSize="16dp"
                android:textColor="#ff333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="40mm"
                android:text="@string/welcome_message"/>
            <EditText
                android:textSize="14dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/second_text_color"
                android:background="@drawable/bg_login_white_input_grey"
                android:paddingLeft="32mm"
                android:layout_width="match_parent"
                android:layout_height="112mm"
                android:layout_marginTop="28mm"
                android:hint="@string/input_welcome_message"
                android:maxLength="50"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textAlignment="viewStart"
                android:layoutDirection="locale"
                android:layout_marginStart="28mm"
                android:layout_marginEnd="28mm"/>
            <TextView
                android:textSize="16dp"
                android:textColor="#ff333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="40mm"
                android:text="@string/room_password"/>
            <EditText
                android:textSize="14dp"
                android:textColor="@color/base_text_color"
                android:textColorHint="@color/second_text_color"
                android:background="@drawable/bg_login_white_input_grey"
                android:paddingLeft="32mm"
                android:layout_width="match_parent"
                android:layout_height="112mm"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="28mm"
                android:layout_marginRight="28mm"
                android:hint="@string/input_room_password"
                android:maxLength="8"
                android:inputType="number"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textAlignment="viewStart"
                android:layoutDirection="locale"/>
            <TextView
                android:textSize="16dp"
                android:textColor="#ff333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="40mm"
                android:text="@string/room_label"/>
            <TextView
                android:textSize="12dp"
                android:textColor="#ff999999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="16mm"
                android:text="@string/room_label_hint"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recy_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28mm"
                android:layout_marginTop="16mm"
                android:layout_marginRight="28mm"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:paddingLeft="28mm"
                android:paddingTop="20mm"
                android:paddingRight="28mm"
                android:paddingBottom="20mm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/base_text_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_bg"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="28mm"
                    android:layout_height="28mm"
                    android:src="@mipmap/ic_right"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:paddingLeft="28mm"
                android:paddingTop="20mm"
                android:paddingRight="28mm"
                android:paddingBottom="20mm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/base_text_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_manger_number"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="28mm"
                    android:layout_height="28mm"
                    android:src="@mipmap/ic_right"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:paddingLeft="28mm"
                android:paddingTop="20mm"
                android:paddingRight="28mm"
                android:paddingBottom="20mm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/base_text_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/room_hick"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="28mm"
                    android:layout_height="28mm"
                    android:src="@mipmap/ic_right"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tv_submit"
                android:background="@drawable/bg_login_gradint_input"
                android:layout_marginLeft="56mm"
                android:layout_marginTop="138mm"
                android:layout_marginRight="56mm"
                android:layout_marginBottom="64mm"
                android:text="@string/btn_save"
                style="@style/login_btn"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
