<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/more_layout"
    android:background="@color/transparent"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="34dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_actions"
        android:background="@drawable/alert_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.95">
        <TextView
            android:textSize="17sp"
            android:textColor="#147aff"
            android:gravity="center"
            android:id="@+id/not_display"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/not_display"/>
        <TextView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="17sp"
            android:textColor="#147aff"
            android:gravity="center"
            android:id="@+id/top_set"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/chat_top"/>
        <TextView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="17sp"
            android:textColor="#147aff"
            android:gravity="center"
            android:id="@+id/clear_chat"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/clear_message"/>
        <TextView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="17sp"
            android:textColor="#ff584c"
            android:gravity="center"
            android:id="@+id/delete_chat"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/chat_delete"/>
    </LinearLayout>
    <TextView
        android:textSize="17sp"
        android:textColor="#147aff"
        android:gravity="center"
        android:id="@+id/cancel_button"
        android:background="@drawable/alert_bg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/cancel"
        android:layout_below="@+id/layout_actions"/>
</RelativeLayout>
