<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#f9efff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_master_salery"
        android:scaleType="centerCrop"/>
    <include
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_top"
        layout="@layout/common_toolbar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_top"
        android:paddingStart="20mm"
        android:paddingEnd="20mm">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bg_master_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20mm"
            android:paddingStart="15mm"
            android:paddingEnd="15mm">
            <TextView
                android:textSize="15dp"
                android:textColor="#050404"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30mm"
                android:layout_marginBottom="10mm"
                android:text="@string/union_chief_salary"
                android:fontFamily="sans-serif-medium"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="64mm">
                <TextView
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/target"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:gravity="center"
                    android:id="@+id/tv_radio"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratio"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:gravity="center"
                    android:id="@+id/tv_host"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:gravity="center"
                    android:id="@+id/tv_salary"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/master"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="14dp"
                    android:textColor="#666666"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:layout_weight="1"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20mm"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
